tests/fixtures/invalid/list_gt_none.py
# Cannot compare with > List[int] and None
x: bool = [1, 2, 3] > None
